Updated runes.html & runes.css

--- a/runes.html
+++ b/runes.html
@@ -14,12 +14,13 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="assets/css/my_style.css" rel="stylesheet">
+    <!-- Runes CSS File -->
+    <link href="assets/css/runes.css" rel="stylesheet">
 </head>
 <body>
-<section id="background_section" data-speed="2" data-type="background">
 <header>
     <div class="navbar-wrapper">
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar navbar-inverse navbar-static-top navbar-runes">
           <div class="container">
             <div class="navbar-header">
                 <a href="main_page.html"><img src="assets/img/logo_tr.png" alt="logo"></a>
@@ -44,35 +45,258 @@
     </div>
 </header>
 
-<main>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Руни <span class="text-muted">It'll blow your mind.</span></h2>
+<main class="runes">
+    <section id="background_section" data-speed="2" data-type="background">
+        <div class="container container-runes">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2 class="featurette-heading">Руни <span class="text-muted">It'll blow your mind.</span></h2>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-7">
-                <iframe width="80%" height="300px" src="https://www.youtube.com/embed/07PlggWJwLM?start=59" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!--<div class="row">
+                <div class="col-md-7">
+                    <iframe width="80%" height="300px" src="https://www.youtube.com/embed/07PlggWJwLM?start=59" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>-->
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-12">
+                  <p class="lead">є старовинною системою письма, що використовувалася в давніх германських та скандинавських культурах, включаючи вікінгів. Вони використовувалися не лише для письма, але й у релігійному та містичному контексті. Важливо відзначити, що у міру поширення християнства в 10-11 століттях рунні системи письма були значно замінені латинським алфавітом.
+                    <br><br>Руни були важливою частиною давньої релігійної практики, і вони вважалися священними символами. Вони використовувалися в ритуалах, сповіщеннях та для зв'язку з божествами. Руни також були використані в рунних чарах - релігійних заклинаннях або прокляттях, вирізаних на камені або інших твердих поверхнях.
+                    <br><br>Існує декілька рунних "алфавітів", відомих як "футарки". Найбільш відомими є старший футарк (24 руни) та молодший футарк (16 рун). Кожна руна має своє ім'я та значення, але у багатьох випадках ці значення відтворюються тільки через пізніші історичні джерела, і точні відповідності часто важко встановити.
+                </div>
             </div>
+            <hr class="featurette-divider">
         </div>
-        <hr class="featurette-divider">
-        <div class="row featurette">
-            <div class="col-md-12">
-              <p class="lead">є старовинною системою письма, що використовувалася в давніх германських та скандинавських культурах, включаючи вікінгів. Вони використовувалися не лише для письма, але й у релігійному та містичному контексті. Важливо відзначити, що у міру поширення християнства в 10-11 століттях рунні системи письма були значно замінені латинським алфавітом.
-                <br><br>Руни були важливою частиною давньої релігійної практики, і вони вважалися священними символами. Вони використовувалися в ритуалах, сповіщеннях та для зв'язку з божествами. Руни також були використані в рунних чарах - релігійних заклинаннях або прокляттях, вирізаних на камені або інших твердих поверхнях.
-                <br><br>Існує декілька рунних "алфавітів", відомих як "футарки". Найбільш відомими є старший футарк (24 руни) та молодший футарк (16 рун). Кожна руна має своє ім'я та значення, але у багатьох випадках ці значення відтворюються тільки через пізніші історичні джерела, і точні відповідності часто важко встановити.
-                <br><br>Незважаючи на їхній історичний контекст, руни все ще використовуються в деяких неоязичницьких та містичних традиціях, зокрема в контексті руничного магічного мистецтва та дивинації. Однак ці сучасні практики відрізняються від того, як руни використовувалися в давньоскандинавській культурі, і часто ґрунтуються на історичних переказах та спекуляціях.</p>
-            </div>
-        </div>
-        <hr class="featurette-divider">
-</main>
+    </section>
+    <section id="background_section_runes_tb" data-speed="2" data-type="background">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ol>
+                        <li>Ісландський - Ættir Эттир Фрейра и Фрейи</li>
+                        <div class="row">
+                        <table class="table">
+                        <thead>
+                          <tr>
+                            <th>Руна</th>
+                            <th>Назва</th>
+                            <th>Переклад</th>
+                            <th>Значення</th>
+                            <th>Транскрипція</th>
+                          </tr>
+                        </thead>
 
+                <tbody>
+                  <tr>
+                    <td class="symbols_size">&#5792;</td>
+                    <td>Fehu (Феху)</td>
+                    <td>«скот»</td>
+                    <td>Власність, володіння, багатство, майно.</td>
+                    <td>f, v</td>
+                  </tr>
+
+                  <tr>
+                    <td class="symbols_size">&#5794;</td>
+                    <td>Uruz (Уруз)</td>
+                    <td>«зубр»</td>
+                    <td>Примітивна сила, пристрасть.</td>
+                    <td>u</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5798;</td>
+                    <td>Þurisaz (Турисаз)</td>
+                    <td>«Турс, Велетень»</td>
+                    <td>Велетень, гігант, Торн, йотун, троль, шип, закон, захист, виклик та випробування, сила.</td>
+                    <td>þ</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5800;</td>
+                    <td>Ansuz</td>
+                    <td>«бог»</td>
+                    <td>Руна поезії та магії, одкровень, натхнення, руна знань та несподіваних відкриттів та зустрічей, мудрості.</td>
+                    <td>a</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5809;</td>
+                    <td>Raido (Райдо)</td>
+                    <td>«шлях»</td>
+                    <td>Дорога, шлях, подорож, еволюція, розвиток</td>
+                    <td>r</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5810;</td>
+                    <td>Kenaz (Кеназ)</td>
+                    <td>«смолоскип»</td>
+                    <td>Знання, творчість, натхнення, вогонь життя, енергія життя, пристрасть, керована сила.</td>
+                    <td>k</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5815;</td>
+                    <td>Gebo (Гебо)</td>
+                    <td>«дар»</td>
+                    <td>Руна єдності протилежностей, дару, руна партнерства та свободи.</td>
+                    <td>g, γ</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5817;</td>
+                    <td>Wunjo (Вуньо)</td>
+                    <td>«радість»</td>
+                    <td>Руна виконання мрії, радості, везіння, процвітання та удачі, щастя.</td>
+                    <td>w</td>
+                  </tr>
+                </tbody>
+            </table>
+                  <li>Норвезька - Ættir Эттир Хеймдаля</li>
+                        <table class="table">
+                        <thead>
+                          <tr>
+                            <th>Руна</th>
+                            <th>Назва</th>
+                            <th>Переклад</th>
+                            <th>Значення</th>
+                            <th>Транскрипція</th>
+                          </tr>
+                        </thead>
+                    <tr>
+                    <td class="symbols_size">&#5818;</td>
+                    <td>Hagalaz (Хагалаз)</td>
+                    <td>«град»</td>
+                    <td>Руна руйнівної енергії, грози та граду, які знищують все на своєму шляху, щоб народилося нове, для особистісного та духовного зростання.</td>
+                    <td>h</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5822;</td>
+                    <td>Nauthiz (Наутиз)</td>
+                    <td>«нужда»</td>
+                    <td>Символізує потребу, кайдани і примус, брак чогось і важкий час.</td>
+                    <td>n</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5825;</td>
+                    <td>Isaz (Иса)</td>
+                    <td>«лід»</td>
+                    <td>Стихійна руна льоду та холоду, творчості.</td>
+                    <td>i</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5827;</td>
+                    <td>Jera (Йера)</td>
+                    <td>«год, врожай»</td>
+                    <td>Руна врожаю, перебіг часу. Йера - руна досягнення та результату.</td>
+                    <td>j</td>
+                  </tr>
+                    <tr>
+                    <td class="symbols_size">&#5858;</td>
+                    <td>Eihwaz (Эйваз)</td>
+                    <td>«град»</td>
+                    <td>Руна подорожей поза тілом та спілкування з Нижнім Світом, смерті, руна оборони та захисту.</td>
+                    <td>é (ih-wh)</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5832;</td>
+                    <td>Perthro (Перт)</td>
+                    <td>«кладезь пам'яти»</td>
+                    <td>Руна долі та жіночого характеру.</td>
+                    <td>p</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5833;</td>
+                    <td>Algiz (Альгиз)</td>
+                    <td>«лось»</td>
+                    <td>Руна захисту, захищеності, заступництва Богів.</td>
+                    <td>-R (-z)</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5834;</td>
+                    <td>Sowilo (Совило)</td>
+                    <td>«Сонце»</td>
+                    <td>Руна перемоги, могутності, цілісності, творчої енергії.</td>
+                    <td>s</td>
+                  </tr>
+                </tbody>
+            </table>
+                  <li>Німецька - Ættir Эттир Тюра</li>
+                     <table class="table">
+                        <thead>
+                          <tr>
+                            <th>Руна</th>
+                            <th>Назва</th>
+                            <th>Переклад</th>
+                            <th>Значення</th>
+                            <th>Транскрипція</th>
+                          </tr>
+                        </thead>
+                    <tr>
+                    <td class="symbols_size">&#5839;</td>
+                    <td>Tiwaz (Тейваз)</td>
+                    <td>«Тюр»</td>
+                    <td>Руна Воїна Духа, присвячена вона богу війни та правосуддя Тюру, руна перемоги.</td>
+                    <td>t</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5842;</td>
+                    <td>Berkana (Беркана)</td>
+                    <td>«береза»</td>
+                    <td>Руна богинь та жіночого початку. Руна реінкарнації.</td>
+                    <td>b</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5846;</td>
+                    <td>Ehwaz (Эваз)</td>
+                    <td>«лошадь»</td>
+                    <td>Руна змін та рухів.</td>
+                    <td>e</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5847;</td>
+                    <td>Mannaz (Манназ)</td>
+                    <td>«человек»</td>
+                    <td>Руна справжнього свого «Я», думки, розуму, розуміння.</td>
+                    <td>m</td>
+                  </tr>
+                    <tr>
+                    <td class="symbols_size">&#5850;</td>
+                    <td>Laguz (Лагуз)</td>
+                    <td>«озеро»</td>
+                    <td>Руна руху, інтуїції, вказівки шляху та заступництва богів.</td>
+                    <td>l</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5852;</td>
+                    <td>Ingwaz (Ингуз)</td>
+                    <td>«Ингви»</td>
+                    <td>Символізує родючість, урожай, успіх.</td>
+                    <td>(Фрейр)	ŋ</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5854;</td>
+                    <td>Dagaz (Дагаз)</td>
+                    <td>«день»</td>
+                    <td>Ця руна означає духовний і матеріальний спадок, символізує собою рід, сім'ю, будинок, власність, Батьківщину, традиції та звичаї предків.</td>
+                    <td>d, ð</td>
+                  </tr>
+                  <tr>
+                    <td class="symbols_size">&#5855;</td>
+                    <td>Othala (Одал)</td>
+                    <td>«наследие»</td>
+                    <td>Це означає радість, силу, здоров'я, благополуччя. Головними її значеннями є прорив та процвітання.</td>
+                    <td>o</td>
+                  </tr>
+                </tbody>
+            </table>
+            </div>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
 <footer>
 
 </footer>
-</section>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
