--- a/Poligon.html
+++ b/Poligon.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
     </div>
-    <a href="main_page.html">Main</a>
+    <a href="index.html">Main</a>
 
     <div style="display: grid; place-items: center;">
         <ul style="list-style-type: none;">
