--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
-                <a href="main_page.html"><img src="assets/img/logo_tr.png" alt="logo"></a>
+                <a href="index.html"><img src="assets/img/logo_tr.png" alt="logo"></a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
